2013-01-11  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Config.pm
	lib/PandoraFMS/Core.pm: clean up the compound alerts from
	server code

2013-01-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed _id_alert_ macro in events.
	
	Merged from branches.

2013-01-10  Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/PluginServer.pm: Added log traces for plugin error
	to notice about low memory.
	* util/plugin/mysql_plugin.sh: Added correct exit code for plugin.

	MERGED FROM 4.0.3

2013-01-10  Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/SNMPServer.pm: Rewrite my commit at rev7388 in more
	general way. logger() call was deleted here, because the corresponding
	error message is recorded by pandora_crash(). Merged from 4.0.x.

	* lib/PandoraFMS/Core.pm: Fixed that invalid regex in
	critical_str or warning_str could make server down at worst.
	Not used logger() here, because the corresponding error
        message is recorded by pandora_crash(). Merged from 4.0.x.

2013-01-09  Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Added log traces to inform
	about the problem of undefined return of snmpget command.

	MERGED FROM 4.0.3

2013-01-09  Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Controlled an error if output of
	SNMP command is empty and fixed several error comparing port of SNMP
	as numbers instead as strings.

	MERGED FROM 4.0.3

2013-01-09  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Fixed on port 0 (Snmp polling).

2013-01-09 Dario Rodriguez <dario.rodriguez@artica.es>

        * lib/PandoraFMS/DataServer.pm: Fixed a bug which creates modules
        with names which have \n\r and later create problems when editing
        the module information.

	MARGED FROM 4.0.3

2013-01-09  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Fixed bug #3555223 about