@@ -1,3 +1,7 @@
+2013-01-11  Sancho Lerena <alerena@artica.es>
+
+	* util/pandora_csvbridge.pl: Fixed code for CSV bridge too
+
 2013-01-11  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/Config.pm
